feat(auth/login): add swagger doc
